# TigerGraphCLI

./: .gitignore  LICENSE  Makefile  README.md  main.py  pyproject.toml
commands/config/: add.py  app.py  delete.py  describe.py  list.py
commands/main/: app.py  util.py
commands/main/delete/: app.py
commands/main/get/: app.py
commands/main/load/: app.py
docs/: GETTING_STARTED.md  USAGE.md
tgcli/: __init__.py  __main__.py
tgcli/commands/: app.py  util.py
tgcli/commands/config/: add.py  app.py  delete.py  describe.py  list.py
tgcli/commands/delete/: app.py
tgcli/commands/etc/: help_text.py
tgcli/commands/get/: app.py
tgcli/commands/gsql/: app.py
tgcli/commands/load/: app.py
tgcli/commands/main/: app.py  util.py
tgcli/commands/main/delete/: app.py
tgcli/commands/main/get/: app.py
tgcli/commands/main/gsql/: app.py
tgcli/commands/main/load/: app.py
tgcli/tigergraph/: common.py
tgcli/util/: cli.py  io.py  tgcli_config.py
tigergraph/: common.py  connection.py
util/: cli.py  tgcli_config.py
