[tool.poetry]
name = "tigergraphcli"
version = "0.0.2"
description = "CLI for TigerGraph"
authors = ["Frank Jia <jiafrank98@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/frankfka/TigerGraphCLI"
documentation = "https://github.com/frankfka/TigerGraphCLI"
keywords = ["TigerGraph", "CLI", "pyTigerGraph", "Graph Database"]
packages = [
    { include = "tgcli" },
]

[tool.poetry.scripts]
tgcli = "tgcli:tgcli"

[tool.poetry.dependencies]
python = "^3.7"
typer = "^0.3.1"
pyTigerGraph = "^0.0.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
